--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
@@ -10,7 +10,7 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.2.0-beta0100" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
   </ItemGroup>
 
