--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
@@ -10,8 +10,9 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Cofoundry.Plugins.Imaging.ImageSharp" Version="0.1.0-ci0011" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
 </Project>
