--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Cofoundry.Plugins.Imaging.ImageSharp" Version="0.4.0-beta0001" />
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.4.0-beta0026" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
