--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
@@ -10,8 +10,8 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Cofoundry.Plugins.Imaging.ImageSharp" Version="0.1.0-ci0016" />
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.5.0-beta0029" />
+    <PackageReference Include="Cofoundry.Plugins.Imaging.ImageSharp" Version="0.1.0-ci0017" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
