--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="Cofoundry.Plugins.Imaging.SkiaSharp" Version="0.3.1" />
     <PackageReference Include="Cofoundry.Web.Admin" Version="0.9.1" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\Cofoundry.Samples.PageBlockTypes.ExampleSharedProject\Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj" />
+  </ItemGroup>
 
 </Project>
