Updated to .NET6 / Cofoundry v0.11

--- a/src/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.10.0" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.11.1" />
   </ItemGroup>
 
 </Project>
