--- a/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes/Cofoundry.Samples.PageBlockTypes.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-	  <MvcRazorExcludeViewFilesFromPublish>false</MvcRazorExcludeViewFilesFromPublish>
+	<TargetFramework>net6.0</TargetFramework>
+	<ImplicitUsings>enable</ImplicitUsings>
+	<MvcRazorExcludeViewFilesFromPublish>false</MvcRazorExcludeViewFilesFromPublish>
     <MvcRazorExcludeRefAssembliesFromPublish>false</MvcRazorExcludeRefAssembliesFromPublish>
   </PropertyGroup>
 
@@ -11,12 +12,12 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Cofoundry.Plugins.Imaging.SkiaSharp" Version="0.4.0" />
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.10.0" />
+    <PackageReference Include="Cofoundry.Plugins.Imaging.SkiaSharp" Version="0.5.0" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.11.1" />
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\Cofoundry.Samples.PageBlockTypes.ExampleSharedProject\Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj" />
+    <ProjectReference Include="..\Cofoundry.Samples.PageBlockTypes.ExampleSharedProject\Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj" />
   </ItemGroup>
 
 </Project>
