--- a/src/Cofoundry.Samples.PageBlockTypes/appsettings.json
+++ b/src/Cofoundry.Samples.PageBlockTypes/appsettings.json
@@ -1,10 +1,11 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
 
   "Cofoundry": {
 
