Update to .NET 8 and Cofoundry 0.12.

--- a/src/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj
+++ b/src/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject/Cofoundry.Samples.PageBlockTypes.ExampleSharedProject.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net6.0</TargetFramework>
-	  <ImplicitUsings>enable</ImplicitUsings>
+	<TargetFramework>net8.0</TargetFramework>
+	<ImplicitUsings>enable</ImplicitUsings>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cofoundry.Web.Admin" Version="0.11.1" />
+    <PackageReference Include="Cofoundry.Web.Admin" Version="0.12.0" />
   </ItemGroup>
 
 </Project>
